refactor: remove animation

--- a/fasilitas-tambahan/3d-art-gallery.html
+++ b/fasilitas-tambahan/3d-art-gallery.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/art/5-art.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/art/5-art.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">3D Art Gallery</h1>
+            <h1 >3D Art Gallery</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/foodcourt">
@@ -99,7 +99,7 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               3D Art Gallery di Gedong Budaya Sabilulungan adalah ruang pameran yang menampilkan karya seni tiga dimensi
               hasil kreativitas seniman lokal.
@@ -109,7 +109,7 @@
               Bandung.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/art/2-art.jpg" alt="" class="stack-front">
               <img src="../assets/img/art/3-art.jpg" alt="" class="stack-back">
@@ -118,10 +118,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/art/4-art.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <p>
               Pengunjung dapat menikmati beragam instalasi seni 3D yang menggambarkan ekspresi budaya dan inovasi
               teknologi dalam bidang seni.
