--- a/fasilitas-tambahan/dome-balerame.html
+++ b/fasilitas-tambahan/dome-balerame.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/dome/1-dome.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/dome/1-dome.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Dome Balerame</h1>
+            <h1 >Dome Balerame</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/science-center">
@@ -95,7 +95,7 @@
 
 
       <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="red-text poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 14.250.000</h1>
+        <h1 class="red-text poppins fw-bold fs-1" >Rp. 14.250.000</h1>
       </div>
 
     </section>
@@ -104,14 +104,14 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Dome Balerame adalah area semi-outdoor berkapasitas besar yang berada dalam kompleks Gedong Budaya
               Sabilulungan. Tempat ini dirancang fleksibel untuk berbagai kegiatan dari pameran, pertunjukan, hingga
               festival tematik
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/dome/2-dome.jpg" alt="" class="stack-front">
               <img src="../assets/img/dome/1-dome.jpg" alt="" class="stack-back">
@@ -120,10 +120,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Area luas dengan atap dome setengah terbuka</span></li>
@@ -136,7 +136,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Pameran produk & UMKM</span></li>
@@ -147,7 +147,7 @@
             </ul>
             <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Dome Balerame">Sewa Sekarang</a>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/dome/4-dome.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
