--- a/fasilitas-tambahan/taman-lembayung-senja.html
+++ b/fasilitas-tambahan/taman-lembayung-senja.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/taman-l/1-taman-l.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/taman-l/1-taman-l.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Taman Lembayung Senja</h1>
+            <h1 >Taman Lembayung Senja</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/dome-balerame">
@@ -99,13 +99,13 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Taman Lembayung Senja adalah salah satu dari dua taman di kawasan Gedong Budaya Sabilulungan yang
               dirancang khusus untuk para penikmat senja.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/taman-l/2-taman-l.jpg" alt="" class="stack-front">
               <img src="../assets/img/taman-l/1-taman-l.jpg" alt="" class="stack-back">
@@ -114,10 +114,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/taman-l/4-taman-l.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <p>
               Taman ini menawarkan pemandangan matahari terbenam yang indah dan suasana yang menenangkan.
             </p>
@@ -125,7 +125,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
               <p>
                 Selain menikmati senja, pengunjung bisa berburu spot foto instagramable dan melakukan aktivitas olahraga ringan.
               </p>
@@ -133,7 +133,7 @@
                 Tempat ini cocok untuk bersantai dan berkumpul bersama keluarga maupun teman.
               </p>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/taman-l/3-taman-l.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
