--- a/fasilitas/ruang-rias.html
+++ b/fasilitas/ruang-rias.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/rias/1-rias.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/rias/1-rias.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Ruang Rias<h1>
+            <h1 >Ruang Rias<h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas/panggung-utama">
@@ -99,13 +99,13 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Ruang rias di Gedong Budaya Sabilulungan disediakan khusus untuk menunjang kenyamanan performer dan talent
               sebelum tampil. Dilengkapi fasilitas memadai agar persiapan bisa dilakukan dengan tenang dan efisien.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/rias/2-rias.jpg" alt="" class="stack-front">
               <img src="../assets/img/rias/1-rias.jpg" alt="" class="stack-back">
@@ -114,10 +114,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/rias/1-rias.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Cermin besar</span></li>
@@ -130,7 +130,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Penari, musisi, dan aktor sebelum tampil</span></li>
@@ -140,7 +140,7 @@
             </ul>
             <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Ruang Rias">Sewa Sekarang</a>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/rias/2-rias.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
