--- a/fasilitas/selasar.html
+++ b/fasilitas/selasar.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/selasar/1-selasar.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/selasar/1-selasar.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Selasar</h1>
+            <h1 >Selasar</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas/ruang-rias">
@@ -99,14 +99,14 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Selasar Gedong Budaya Sabilulungan merupakan area semi-outdoor yang luas dan fleksibel. Didesain untuk
               menunjang alur acara, tempat bersantai, atau bahkan aktivitas kreatif yang tak memerlukan ruangan
               tertutup.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/selasar/2-selasar.jpg" alt="" class="stack-front">
               <img src="../assets/img/selasar/3-selasar.jpg" alt="" class="stack-back">
@@ -115,10 +115,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/selasar/4-selasar.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Area transisi antara ruang utama & outdoor</span></li>
@@ -131,7 +131,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Booth komunitas atau UMKM</span></li>
@@ -141,7 +141,7 @@
             </ul>
             <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Selasar">Sewa Sekarang</a>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/selasar/5-selasar.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
