--- a/fasilitas-tambahan/foodcourt.html
+++ b/fasilitas-tambahan/foodcourt.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/foodcourt/1-foodcourt.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/foodcourt/1-foodcourt.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Foodcourt Gedong Budaya Sabilulungan</h1>
+            <h1 >Foodcourt Gedong Budaya Sabilulungan</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/taman-lembayung-senja">
@@ -99,10 +99,10 @@
     <section id="features" class="features section">
       <div class="container-fluid">
         <div class="row gy-4 align-items-center justify-content-around features-item">
-          <div class="col-lg-5 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-5 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/foodcourt/1-foodcourt.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-1 order-lg-2" >
             <p>
               Foodcourt di Gedong Budaya Sabilulungan berfungsi sebagai penyedia makanan dan minuman sederhana untuk
               kebutuhan pengunjung selama beraktivitas di kawasan budaya ini.
