--- a/fasilitas-tambahan/science-center.html
+++ b/fasilitas-tambahan/science-center.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/science/1-science-center.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/science/1-science-center.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Science Center</h1>
+            <h1 >Science Center</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/taman-kaulinan-barudak">
@@ -99,7 +99,7 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Science Center Sabilulungan (SCS) adalah tempat wisata edukatif interaktif yang menghadirkan pengalaman
               belajar yang menyenangkan.
@@ -109,7 +109,7 @@
               pengetahuan, budaya, dan teknologi dalam satu ruang edukatif yang penuh kejutan.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/science/2-science-center.jpg" alt="" class="stack-front">
               <img src="../assets/img/science/3-science-center.jpg" alt="" class="stack-back">
@@ -118,10 +118,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/science/7-science-center.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3>Apa Saja yang Bisa Kamu Nikmati?</h3>
             <ul>
               <li>
@@ -172,7 +172,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3>Harga Tiket Masuk</h3>
             <p>
               Kami menyediakan paket reguler dengan harga yang terjangkau dan fasilitas lengkap
@@ -202,7 +202,7 @@
               <li><i class="text-dark bi bi-check"></i><span>Alat Peraga Sains</span></li>
             </ul>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/dome/4-dome.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
