--- a/fasilitas-tambahan/taman-kaulinan-barudak.html
+++ b/fasilitas-tambahan/taman-kaulinan-barudak.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/taman-k/1-taman.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/taman-k/1-taman.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Taman Kaulinan Barudak</h1>
+            <h1 >Taman Kaulinan Barudak</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas-tambahan/3d-art-gallery">
@@ -99,23 +99,23 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <p>
               Taman Kaulinan Barudak menghadirkan berbagai macam permainan tradisional yang menarik dan edukatif. Di
               taman ini, pengunjung, terutama anak-anak, dapat mencoba permainan tradisional seperti sondah, enggrang,
               dan masih banyak lagi.
             </p>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/taman-k/1-taman.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/taman-k/2-taman.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <p>
               Fasilitas ini bertujuan melestarikan budaya permainan rakyat sekaligus memberikan ruang bermain yang
               menyenangkan dan aman bagi anak-anak dan keluarga.
