--- a/fasilitas/ruang-pertemuan.html
+++ b/fasilitas/ruang-pertemuan.html
@@ -69,7 +69,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/pertemuan/1-pertemuan.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/pertemuan/1-pertemuan.jpg" alt="" >
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
@@ -79,7 +79,7 @@
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Ruang Pertemuan</h1>
+            <h1 >Ruang Pertemuan</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
             <a class="circle-btn" href="/fasilitas/ruang-vip">
@@ -95,7 +95,7 @@
 
 
       <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="red-text poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 3.500.000</h1>
+        <h1 class="red-text poppins fw-bold fs-1" >Rp. 3.500.000</h1>
       </div>
 
     </section>
@@ -104,14 +104,14 @@
     <section id="features" class="features section">
       <div class="container">
         <div class="row gy-4 align-items-center features-item">
-          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-5 order-2 order-lg-1" >
             <p>
               Ruang pertemuan Gedong Budaya Sabilulungan menghadirkan kenyamanan dan fasilitas lengkap untuk berbagai
               aktivitas formal dan komunitas. Cocok untuk organisasi, komunivtas seni, hingga pelaku usaha yang butuh
               ruang representatif.
             </p>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" >
             <div class="image-stack">
               <img src="../assets/img/pertemuan/2-pertemuan.jpg" alt="" class="stack-front">
               <img src="../assets/img/pertemuan/1-pertemuan.jpg" alt="" class="stack-back">
@@ -120,10 +120,10 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/pertemuan/1-pertemuan.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">FASILITAS & SPESIFIKASI</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Kapasitas hingga 50 peserta</span></li>
@@ -138,7 +138,7 @@
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" >
             <h3 class="green-text">COCOK DIGUNAKAN UNTUK</h3>
             <ul>
               <li><i class="bi bi-dot"></i><span>Rapat organisasi & komunitas</span></li>
@@ -148,7 +148,7 @@
             </ul>
             <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Ruang Pertemuan">Sewa Sekarang</a>
           </div>
-          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" >
             <img src="../assets/img/pertemuan/2-pertemuan.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
