--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/addon/bg-hero.jpg" alt="" data-aos="fade-in" loading="lazy">
+      <img src="assets/img/addon/bg-hero.jpg" alt="" >
 
       <div class="container">
         <div class="row">
           <div class="col-lg-10">
-            <h2 data-aos="fade-up" data-aos-delay="100">Selamat Datang di<br> Gedong
+            <h2 >Selamat Datang di<br> Gedong
               Budaya Sabilulungan</h2>
-            <p data-aos="fade-up" data-aos-delay="200" class="my-4 yellow-text nunito fs-3">Panggung karya, Ruang
+            <p  class="my-4 yellow-text nunito fs-3">Panggung karya, Ruang
               Inspirasi
             </p>
           </div>
-          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-5" >
             <a class="btn btn-danger red-background rounded-4" href="#fasility">Jelajahi Fasilitas Kami</a>
           </div>
         </div>
@@ -93,7 +93,7 @@
     <!-- About Section -->
     <section id="about" class="about section light-background">
 
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+      <div class="container-fluid" >
         <div class="row align-items-xl-center justify-content-around gy-5">
 
           <div class="col-xl-5 content py-3 rounded">
@@ -128,18 +128,18 @@
     <section id="stats" class="stats section dark-background">
 
       <div class="img-crop">
-        <img src="assets/img/addon/bg-stats.jpg" alt="" data-aos="fade-in" loading="lazy">
+        <img src="assets/img/addon/bg-stats.jpg" alt="" >
       </div>
 
-      <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
+      <div class="container position-relative" >
 
         <div class="row align-items-xl-center justify-content-center gy-5">
-          <div class="col-xl-12 text-center mb-xl-5" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-xl-12 text-center mb-xl-5" >
             <h2 class="text-center fw-bold fs-1 yellow-text">Mengapa Gedong Budaya Sabilulungan</h2>
           </div>
           <div class="col-xl-10">
             <div class="row gy-4 icon-boxes justify-content-center">
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+              <div class="col-md-6" >
                 <div class="icon-box">
                   <i class="bi bi-building-fill"></i>
                   <h3 class="yellow-text">Fasilitas Lengkap</h3>
@@ -148,7 +148,7 @@
                 </div>
               </div> <!-- End Icon Box -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="col-md-6" >
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3 class="yellow-text">Lokasi Strategis</h3>
@@ -157,7 +157,7 @@
                 </div>
               </div> <!-- End Icon Box -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+              <div class="col-md-6" >
                 <div class="icon-box">
                   <i class="bi bi-brush"></i>
                   <h3 class="yellow-text">Serbaguna untuk
@@ -181,7 +181,7 @@
     <section id="fasility" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" >
         <h2>Fasilitas Utama</h2>
         <p>Lengkap & Siap Mendukung Suksesnya Acaramu</p>
       </div><!-- End Section Title -->
@@ -191,7 +191,7 @@
         <div class="row gy-4">
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -208,7 +208,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -224,7 +224,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -241,7 +241,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -256,7 +256,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -282,7 +282,7 @@
     <section id="fasility-addon" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" >
         <h2 class="red-text">Fasilitas Tambahan</h2>
       </div><!-- End Section Title -->
 
@@ -291,7 +291,7 @@
         <div class="row gy-4">
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -309,7 +309,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -326,7 +326,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -343,7 +343,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -358,7 +358,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -376,7 +376,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 " >
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -407,7 +407,7 @@
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" >
         <h2 class="green-text">Galeri GBS</h2>
         <p>Dokumentasi: Merangkai Momen, Merawat Budaya</p>
       </div><!-- End Section Title -->
@@ -416,7 +416,7 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <ul class="portfolio-filters isotope-filters" >
             <li data-filter="*" class="filter-active">Semua</li>
             <li data-filter=".filter-acara">Acara</li>
             <li data-filter=".filter-panggung">Panggung Utama</li>
@@ -427,7 +427,7 @@
             <li data-filter=".filter-dome">Dome Balarame</li>
           </ul><!-- End Portfolio Filters -->
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 isotope-container" >
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
               <img src="assets/img/acara/1-acara.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
@@ -529,12 +529,12 @@
     <section id="pricing" class="pricing section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" >
         <h2 class="red-text">Paket Sewa</h2>
         <p>Temukan pilihan sewa yang pas untuk acaramu!</p>
       </div><!-- End Section Title -->
 
-      <div class="container-fluid" data-aos="zoom-in" data-aos-delay="100">
+      <div class="container-fluid" >
         <div class="row g-5">
           <div class="col-lg-3">
             <div class="pricing-item">
@@ -644,7 +644,7 @@
       <div class="container">
         <div class="row align-items-center">
 
-          <div class="col-lg-5 info py-5 px-3" data-aos="fade-up" data-aos-delay="100"
+          <div class="col-lg-5 info py-5 px-3"
             style="background-color: #ffffffec;">
             <h3 class="green-text">Apa Kata Mereka</h3>
             <p>
@@ -653,7 +653,7 @@
             </p>
           </div>
 
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-7" >
 
             <div class="swiper init-swiper shadow-box">
               <script type="application/json" class="swiper-config">
@@ -753,11 +753,11 @@
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" >
         <h2>Hubungi Kami</h2>
       </div><!-- End Section Title -->
 
-      <div class="container-lg" data-aos="fade-up" data-aos-delay="100">
+      <div class="container-lg" >
 
         <div class="row gy-4">
 
@@ -765,8 +765,7 @@
 
             <div class="row gy-4 align-items-stretch">
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="200">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" >
                   <i class="bi bi-geo-alt"></i>
                   <h3>Alamat</h3>
                   <p> Jl. Al-Fathu No.104, Pamekaran, Kec. Soreang, Kabupaten Bandung</p>
@@ -775,8 +774,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" >
                   <i class="bi bi-instagram"></i>
                   <h3>Instagram</h3>
                   <p>@gedongsabilulungan</p>
@@ -784,8 +782,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="400">
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-envelope"></i>
                   <h3>Email</h3>
                   <small>GedongBudayaSabilulungan<br>@gmail.com</small>
@@ -793,8 +790,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" >
                   <i class="bi bi-tiktok"></i>
                   <h3>Tiktok</h3>
                   <p>@Gedongbudayasabilulungan</p>
@@ -802,8 +798,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" >
                   <i class="bi bi-telephone"></i>
                   <h3>Telepon</h3>
                   <p>+62 822 1851 4666</p>
@@ -812,8 +807,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
-                  data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" >
                   <i class="bi bi-youtube"></i>
                   <h3>YouTube</h3>
                   <p>Gedong Budaya Sabilulungan</p>
@@ -826,7 +820,7 @@
 
           <div class="col-lg-6">
             <div class="row gy-4 justify-content-between h-100">
-              <div class="col-md-12 mb-0 mb-md-auto" data-aos="fade-up" data-aos-delay="200"
+              <div class="col-md-12 mb-0 mb-md-auto"
                 style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4217.70922044994!2d107.5303045!3d-7.0206833999999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68ec32bba247ad%3A0x67a5f639a74fa907!2sGedong%20Budaya%20Sabilulungan!5e1!3m2!1sen!2sid!4v1748714983466!5m2!1sen!2sid"
@@ -836,8 +830,7 @@
               </div>
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" data-aos="fade"
-                  data-aos-delay="200">
+                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
                   <i class="bi bi-map text-success"></i>
                   <h6 class="my-2">5 Menit Dari</h6>
                   <p>Gerbang Tol Soroja</p>
@@ -845,8 +838,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" data-aos="fade"
-                  data-aos-delay="200">
+                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
                   <i class="bi bi-bus-front text-success"></i>
                   <h6 class="my-2">Shelter</h6>
                   <p>Bus Damri</p>
@@ -854,8 +846,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" data-aos="fade"
-                  data-aos-delay="200">
+                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
                   <i class="bi bi-p-square text-success"></i>
                   <h6 class="my-2">Parkir</h6>
                   <p>300 <small style="font-size: 10px;">Mobil</small> & 500 <small
@@ -867,7 +858,7 @@
 
 
           <div class="col-lg-12" id="contact-form">
-            <form action="javascript:;" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="javascript:;" method="post" class="php-email-form" >
               <div class="row gy-4">
 
                 <div class="col-md-6">
