hotfix: change to update

--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/addon/bg-hero.jpg" alt="" >
+      <img src="assets/img/addon/bg-hero.jpg" alt="">
 
       <div class="container">
         <div class="row">
           <div class="col-lg-10">
-            <h2 >Selamat Datang di<br> Gedong
+            <h2>Selamat Datang di<br> Gedong
               Budaya Sabilulungan</h2>
-            <p  class="my-4 yellow-text nunito fs-3">Panggung karya, Ruang
+            <p class="my-4 yellow-text nunito fs-3">Panggung karya, Ruang
               Inspirasi
             </p>
           </div>
-          <div class="col-lg-5" >
+          <div class="col-lg-5">
             <a class="btn btn-danger red-background rounded-4" href="#fasility">Jelajahi Fasilitas Kami</a>
           </div>
         </div>
@@ -93,7 +93,7 @@
     <!-- About Section -->
     <section id="about" class="about section light-background">
 
-      <div class="container-fluid" >
+      <div class="container-fluid">
         <div class="row align-items-xl-center justify-content-around gy-5">
 
           <div class="col-xl-5 content py-3 rounded">
@@ -112,9 +112,10 @@
 
           <div class="col-xl-5">
             <div class="ratio ratio-16x9 rounded shadow-box overflow-hidden">
-              <iframe src="https://www.youtube.com/embed/qun8TWK3Faw?rel=0" title="YouTube video player" frameborder="0"
+              <iframe src="https://www.youtube.com/embed/GBgUo6SJCJk?si=XkpfeQlnfrQ5PJWC?rel=0"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
               </iframe>
             </div>
           </div>
@@ -128,19 +129,18 @@
     <section id="stats" class="stats section dark-background">
 
       <div class="img-crop">
-        <img src="assets/img/addon/bg-stats.jpg" alt="" >
+        <img src="assets/img/addon/bg-stats.jpg" alt="">
       </div>
 
-      <div class="container position-relative" >
-
+      <div class="container position-relative">
         <div class="row align-items-xl-center justify-content-center gy-5">
-          <div class="col-xl-12 text-center mb-xl-5" >
+          <div class="col-xl-12 text-center mb-xl-5">
             <h2 class="text-center fw-bold fs-1 yellow-text">Mengapa Gedong Budaya Sabilulungan</h2>
           </div>
           <div class="col-xl-10">
-            <div class="row gy-4 icon-boxes justify-content-center">
-              <div class="col-md-6" >
-                <div class="icon-box">
+            <div class="row gy-4 icon-boxes aligin-items-stretch justify-content-center">
+              <div class="col-md-6 h-100">
+                <div class="icon-box h-100">
                   <i class="bi bi-building-fill"></i>
                   <h3 class="yellow-text">Fasilitas Lengkap</h3>
                   <p>Ruang pertunjukan berkapasitas ±800 kursi, didukung pencahayaan dan akustik profesional. Lengkap
@@ -148,8 +148,8 @@
                 </div>
               </div> <!-- End Icon Box -->
 
-              <div class="col-md-6" >
-                <div class="icon-box">
+              <div class="col-md-6 h-100">
+                <div class="icon-box h-100">
                   <i class="bi bi-geo-alt"></i>
                   <h3 class="yellow-text">Lokasi Strategis</h3>
                   <p>Terletak di pusat Soreang, berdampingan dengan Kantor Bupati dan Masjid Al-Fathu. Mudah diakses
@@ -157,8 +157,8 @@
                 </div>
               </div> <!-- End Icon Box -->
 
-              <div class="col-md-6" >
-                <div class="icon-box">
+              <div class="col-md-6 h-100">
+                <div class="icon-box h-100">
                   <i class="bi bi-brush"></i>
                   <h3 class="yellow-text">Serbaguna untuk
                     Acara Seni & Formal</h3>
@@ -181,7 +181,7 @@
     <section id="fasility" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" >
+      <div class="container section-title">
         <h2>Fasilitas Utama</h2>
         <p>Lengkap & Siap Mendukung Suksesnya Acaramu</p>
       </div><!-- End Section Title -->
@@ -191,7 +191,7 @@
         <div class="row gy-4">
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -208,7 +208,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -224,7 +224,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -241,7 +241,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -256,7 +256,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -282,8 +282,9 @@
     <section id="fasility-addon" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" >
+      <div class="container section-title">
         <h2 class="red-text">Fasilitas Tambahan</h2>
+        <p>Dukungan Fasilitas yang Siap Menemani Setiap Momen Istimewamu</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -291,7 +292,7 @@
         <div class="row gy-4">
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -309,7 +310,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -326,7 +327,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -343,7 +344,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -358,7 +359,7 @@
           <!-- End Service Item -->
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -376,7 +377,7 @@
 
 
           <!-- begin Service Item -->
-          <div class="col-lg-6 " >
+          <div class="col-lg-6 ">
             <div
               class="service-item d-flex flex-column flex-lg-row justify-content-center align-items-center aligin-items-lg-start">
               <div class="icon flex-shrink-0">
@@ -407,7 +408,7 @@
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
-      <div class="container section-title" >
+      <div class="container section-title">
         <h2 class="green-text">Galeri GBS</h2>
         <p>Dokumentasi: Merangkai Momen, Merawat Budaya</p>
       </div><!-- End Section Title -->
@@ -416,7 +417,7 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" >
+          <ul class="portfolio-filters isotope-filters">
             <li data-filter="*" class="filter-active">Semua</li>
             <li data-filter=".filter-acara">Acara</li>
             <li data-filter=".filter-panggung">Panggung Utama</li>
@@ -427,7 +428,7 @@
             <li data-filter=".filter-dome">Dome Balarame</li>
           </ul><!-- End Portfolio Filters -->
 
-          <div class="row gy-4 isotope-container" >
+          <div class="row gy-4 isotope-container">
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
               <img src="assets/img/acara/1-acara.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
@@ -529,12 +530,12 @@
     <section id="pricing" class="pricing section">
 
       <!-- Section Title -->
-      <div class="container section-title" >
+      <div class="container section-title">
         <h2 class="red-text">Paket Sewa</h2>
         <p>Temukan pilihan sewa yang pas untuk acaramu!</p>
       </div><!-- End Section Title -->
 
-      <div class="container-fluid" >
+      <div class="container-fluid">
         <div class="row g-5">
           <div class="col-lg-3">
             <div class="pricing-item">
@@ -557,7 +558,8 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Perunggu" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Perunggu" class="buy-btn">Pesan
+                  Sekarang</a></div>
             </div>
           </div>
 
@@ -581,7 +583,8 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Silver" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Silver" class="buy-btn">Pesan
+                  Sekarang</a></div>
             </div>
           </div>
 
@@ -606,7 +609,8 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Penambahan Listrik</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Gun Smoke</span></li>
               </ul>
-              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Gold" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Gold" class="buy-btn">Pesan
+                  Sekarang</a></div>
             </div>
           </div>
 
@@ -630,7 +634,8 @@
                 <li><i class="bi bi-check"></i> <span>Gun Smoke</span></li>
                 <li><i class="bi bi-check"></i> <span>Latihan/Gradi Resik</span></li>
               </ul>
-              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Platinum" class="buy-btn">Pesan Sekarang</a></div>
+              <div class="text-center"><a href="javascript:void(0)" data-paket="Paket Platinum" class="buy-btn">Pesan
+                  Sekarang</a></div>
             </div>
           </div>
         </div>
@@ -644,8 +649,7 @@
       <div class="container">
         <div class="row align-items-center">
 
-          <div class="col-lg-5 info py-5 px-3"
-            style="background-color: #ffffffec;">
+          <div class="col-lg-5 info py-5 px-3" style="background-color: #ffffffec;">
             <h3 class="green-text">Apa Kata Mereka</h3>
             <p>
               Cerita dari mereka yang pernah bikin acara seru di GBS
@@ -653,7 +657,7 @@
             </p>
           </div>
 
-          <div class="col-lg-7" >
+          <div class="col-lg-7">
 
             <div class="swiper init-swiper shadow-box">
               <script type="application/json" class="swiper-config">
@@ -753,19 +757,19 @@
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
-      <div class="container section-title" >
+      <div class="container section-title">
         <h2>Hubungi Kami</h2>
       </div><!-- End Section Title -->
 
-      <div class="container-lg" >
+      <div class="container-lg">
 
         <div class="row gy-4">
 
           <div class="col-lg-6">
 
-            <div class="row gy-4 align-items-stretch">
+            <div class="row gy-4 align-items-stretch" id="contact-info">
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" >
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Alamat</h3>
                   <p> Jl. Al-Fathu No.104, Pamekaran, Kec. Soreang, Kabupaten Bandung</p>
@@ -774,7 +778,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" >
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-instagram"></i>
                   <h3>Instagram</h3>
                   <p>@gedongsabilulungan</p>
@@ -790,7 +794,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" >
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-tiktok"></i>
                   <h3>Tiktok</h3>
                   <p>@Gedongbudayasabilulungan</p>
@@ -798,7 +802,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" >
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-telephone"></i>
                   <h3>Telepon</h3>
                   <p>+62 822 1851 4666</p>
@@ -807,7 +811,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" >
+                <div class="info-item h-100 d-flex flex-column justify-content-between">
                   <i class="bi bi-youtube"></i>
                   <h3>YouTube</h3>
                   <p>Gedong Budaya Sabilulungan</p>
@@ -830,7 +834,7 @@
               </div>
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
+                <div class="info-item d-flex justify-content-center align-items-center flex-column">
                   <i class="bi bi-map text-success"></i>
                   <h6 class="my-2">5 Menit Dari</h6>
                   <p>Gerbang Tol Soroja</p>
@@ -838,7 +842,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
+                <div class="info-item d-flex justify-content-center align-items-center flex-column">
                   <i class="bi bi-bus-front text-success"></i>
                   <h6 class="my-2">Shelter</h6>
                   <p>Bus Damri</p>
@@ -846,11 +850,11 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-4">
-                <div class="info-item d-flex justify-content-center align-items-center flex-column" >
+                <div class="info-item d-flex justify-content-center align-items-center flex-column">
                   <i class="bi bi-p-square text-success"></i>
                   <h6 class="my-2">Parkir</h6>
-                  <p>300 <small style="font-size: 10px;">Mobil</small> & 500 <small
-                      style="font-size: 10px;">motor</small></p>
+                  <p>300 Mobil</p>
+                  <p>500 Motor</p>
                 </div>
               </div><!-- End Info Item -->
             </div>
@@ -858,7 +862,7 @@
 
 
           <div class="col-lg-12" id="contact-form">
-            <form action="javascript:;" method="post" class="php-email-form" >
+            <form action="javascript:;" method="post" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -866,7 +870,7 @@
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="text" class="form-control" name="company" placeholder="Istansi / Komunitas" required="">
+                  <input type="text" class="form-control" name="company" placeholder="instansi / Komunitas" required="">
                 </div>
 
                 <div class="col-12">
