--- a/fasilitas-tambahan/science-center.html
+++ b/fasilitas-tambahan/science-center.html
@@ -125,11 +125,12 @@
             <h3>Apa Saja yang Bisa Kamu Nikmati?</h3>
             <ul>
               <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
                   <path fill="currentColor" fill-rule="evenodd"
                     d="m3.096.577l5.91-.003v2.303l-5.91.003a1.25 1.25 0 0 1-.742-.243l-.958-.707a.25.25 0 0 1 0-.402L2.355.82a1.25 1.25 0 0 1 .74-.244Zm8.343 2.298l-1.183.001V.573h1.187c.634.01 1.119.573 1.119 1.15c0 .578-.485 1.142-1.119 1.152zm-5.931 2.31c.335.134.62.281.867.427V14a5.5 5.5 0 0 0-1.24-.7c-.735-.294-1.795-.537-3.412-.537a.5.5 0 0 1-.5-.5V5.075a.5.5 0 0 1 .5-.5c1.72 0 2.91.259 3.785.61M8.864 13.3c-.54.217-.919.466-1.24.699V5.611c.247-.146.533-.293.868-.427c.875-.351 2.065-.61 3.785-.61a.5.5 0 0 1 .5.5v7.188a.5.5 0 0 1-.5.5c-1.617 0-2.677.243-3.413.538"
                     clip-rule="evenodd" />
-                </svg>
+                </svg> -->
+                <i class="bi bi-dot text-dark"></i>
                 <span class="ms-3">
                   Zona Edukasi Sains Lebih dari 3000 buku dan alat peraga interaktif dari
                   fisika, kimia, biologi, hingga astronomi.
@@ -137,31 +138,34 @@
               </li>
 
               <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" class="text-danger">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" class="text-danger">
                   <path fill="currentColor"
                     d="M4 15h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v3H1v-3h1v-2a2 2 0 0 1 2-2m7-8l4 3l-4 3zM4 2h16a2 2 0 0 1 2 2v9.54a3.9 3.9 0 0 0-2-.54V4H4v9c-.73 0-1.41.19-2 .54V4a2 2 0 0 1 2-2" />
-                </svg>
+                </svg> -->
+                <i class="bi bi-dot text-dark"></i>
                 <span class="ms-3">
                   Bioskop 4D Dilengkapi kacamata 4D dan kursi bergerak otomatis untuk pengalaman menonton yang nyata.
                 </span>
               </li>
 
               <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
                   <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                     d="m5 .5l2 2l2-2M.5 9l2-2l-2-2M9 13.5l-2-2l-2 2M13.5 5l-2 2l2 2m-10-5.5L5 5m0 4l-1.5 1.5m7-7L9 5m0 4l1.5 1.5M7 2.5v9M2.5 7h9"
                     stroke-width="1" />
-                </svg>
+                </svg> -->
+                <i class="bi bi-dot text-dark"></i>
                 <span class="ms-3">
                   Zona Kutub AR Simulasi lingkungan kutub dengan suhu dingin dan teknologi Augmented Reality.
                 </span>
               </li>
 
               <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 256 256">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 256 256">
                   <path fill="currentColor"
                     d="M208 56h-27.72l-13.63-20.44A8 8 0 0 0 160 32H96a8 8 0 0 0-6.65 3.56L75.71 56H48a24 24 0 0 0-24 24v112a24 24 0 0 0 24 24h160a24 24 0 0 0 24-24V80a24 24 0 0 0-24-24m-44 76a36 36 0 1 1-36-36a36 36 0 0 1 36 36" />
-                </svg>
+                </svg> -->
+                <i class="bi bi-dot text-dark"></i>
                 <span class="ms-3">
                   Spot Foto Instalasi edukatif dan kreatif yang cocok untuk foto dan media sosial.
                 </span>
